[package]
name = "dht11serv"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.26", features = ["bundled"] }
chrono = "0.4.38"
sysinfo = "0.32.0"
local-ip-address = "0.4" 
